0.3.4

- Added Feature: Attachments for snips
- WAR: introduced configuration properties for indexer and config files
- Developer: Refactored the rendering engine to form sub-project Radeox
- Added Service class for plugin loading (instead of undocumented sun class)
- Removed Transliterate in favour of UTF-8
- Developer: Added getParamDescription() to MacroParameter
- Fixed bug: RSS would display to many items
- Added feature: SnipSnap has XML-RPC interface with method "generator.version()" to get SnipSnap version
- Added feature: SnipSnap displays version in HTML with META generator tag
- Added feature: SnipSnap displays version information about itself with .../rest/version
- Fixed bug: external images didn't display

0.3.3 - 2003-01-22

- Fixed bug: web GUI import, multi-value html form parameter recognised for multipart/form-data
- Fixed bug: RSS feed truncated entities, e.g. &x32...
- Added feature: RFC macro {rfc:123} or {rfc:123|Great RFC} links to RFCs
- Fixed bug: RSS was accidently refactored and didn't work
- Added feature: "Recently changed" links comments to threads, not to individual posts
- Fixed bug: always find Java under MacOS X (no need for JAVA_HOME setting)
- Added feature: Increase and decrease the shown month in the calendar view
- Added feature: Calendar now displays correct day names with the correct locale

0.3.2 - 2003-01-10

- Added feature: geoURL support, add app.geoCoordinates=x.x, y.y
- Fixed bug: Weblog dates use app.locale (e.g. app.locale=de, default is "en")
- Fixed bug: XML feeds (RSD, RSS) should no be legal UTF-8
- Developer: Refactored Snip to use interface and introduced interceptors (AOP)
- Fixed bug: RSD <api> was not closed
- Added feature: /raw/<snip-name> displays the raw content of a snip
- Added feature: uploading of images for a snip
- Added UNICODE (UTF-8 by default) support
- Added feature: importing snips from web frontend
- Fixed bug: referer corrected after multiple login tries