@@ -1,4 +1,0 @@
-org.radeox.macro.code.SqlCodeFilter
-org.radeox.macro.code.JavaCodeFilter
-org.radeox.macro.code.XmlCodeFilter
-org.radeox.macro.code.NullCodeFilter
